--- a/.github/workflows/keyvalut_Test.yml
+++ b/.github/workflows/keyvalut_Test.yml
@@ -14,7 +14,7 @@
         - uses: Azure/get-keyvault-secrets@v1
         with: 
             keyvault: "webappdevops"
-            secrets: 'wHi9YX8peY7D5jnM2gau2tqx8w2FNAV8NZT1BG9/Zx+ACRCuO6Dw, webappregi1'
+            secrets: 'containerPassword, containerUsername'
         id: myGetSecretAction
         - uses: azure/docker-login@v1
         with:
